@@ -30,6 +30,9 @@ import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClientApi;
 import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
 import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
+import uk.gov.hmcts.reform.prl.clients.RoleAssignmentApi;
+import uk.gov.hmcts.reform.prl.config.launchdarkly.LaunchDarklyClient;
+import uk.gov.hmcts.reform.prl.enums.Roles;
 import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.enums.managedocuments.DocumentPartyEnum;
 import uk.gov.hmcts.reform.prl.models.Element;
@@ -40,6 +43,9 @@ import uk.gov.hmcts.reform.prl.models.complextypes.managedocuments.ManageDocumen
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.DocumentManagementDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.ReviewDocuments;
+import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentResponse;
+import uk.gov.hmcts.reform.prl.models.roleassignment.getroleassignment.RoleAssignmentServiceResponse;
+import uk.gov.hmcts.reform.prl.models.user.UserRoles;
 import uk.gov.hmcts.reform.prl.services.CoreCaseDataService;
 import uk.gov.hmcts.reform.prl.services.SystemUserService;
 import uk.gov.hmcts.reform.prl.services.UserService;
@@ -66,11 +72,14 @@ import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 import static org.springframework.http.MediaType.APPLICATION_PDF_VALUE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.BULK_SCAN;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CAFCASS_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CITIZEN_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CONFIDENTIAL_DOCUMENTS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_ADMIN_ROLE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.COURT_STAFF;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JUDGE_ROLE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LEGAL_ADVISER_ROLE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOA_MULTIPART_FILE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SOLICITOR_ROLE;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
@@ -84,6 +93,9 @@ public class ManageDocumentsServiceTest {
 
     @Mock
     private ObjectMapper objectMapper;
+
+    @Mock
+    private LaunchDarklyClient launchDarklyClient;
 
     @Mock
     private CoreCaseDataApi coreCaseDataApi;
@@ -145,11 +157,9 @@ public class ManageDocumentsServiceTest {
 
     List<Element<QuarantineLegalDoc>> courtStaffUploadDocListDocTab;
 
-    List<Element<QuarantineLegalDoc>> citizenQuarantineDocsList;
-
-    List<Element<QuarantineLegalDoc>> citizenUploadDocListDocTab;
-
     UserDetails userDetailsSolicitorRole;
+
+    UserDetails userDetailsBulScanRole;
 
     UserDetails userDetailsCitizenRole;
 
@@ -168,6 +178,9 @@ public class ManageDocumentsServiceTest {
     QuarantineLegalDoc quarantineConfidentialDoc;
 
     QuarantineLegalDoc quarantineCaseDoc;
+
+    @Mock
+    private RoleAssignmentApi roleAssignmentApi;
 
     @Before
     public void init() {
@@ -196,28 +209,40 @@ public class ManageDocumentsServiceTest {
             .listItems(dynamicListElementList).build();
 
         userDetailsSolicitorRole = UserDetails.builder()
+            .id("123")
             .forename("test")
             .surname("test")
             .roles(Collections.singletonList(SOLICITOR_ROLE))
             .build();
-
+        userDetailsBulScanRole = UserDetails.builder()
+            .id("123")
+            .forename("test")
+            .surname("test")
+            .roles(Collections.singletonList(Roles.BULK_SCAN.getValue()))
+            .build();
         userDetailsCafcassRole = UserDetails.builder()
+            .id("234")
             .forename("test")
             .surname("test")
             .roles(Collections.singletonList(CAFCASS_ROLE))
             .build();
         userDetailsCourtAdminRole = UserDetails.builder()
+            .id("345")
             .forename("test")
             .surname("test")
-            .roles(Collections.singletonList(COURT_ADMIN_ROLE))
+            .roles(List.of(COURT_ADMIN_ROLE, COURT_STAFF))
             .build();
         userDetailsCourtStaffRoleExpectAdmin = UserDetails.builder()
+            .id("456")
             .forename("test")
             .surname("test")
             .roles(Collections.singletonList(JUDGE_ROLE))
             .build();
 
+
+
         userDetailsCitizenRole = UserDetails.builder()
+            .id("678")
             .forename("test")
             .surname("test")
             .roles(Collections.singletonList(CITIZEN_ROLE))
@@ -468,6 +493,12 @@ public class ManageDocumentsServiceTest {
 
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRoleExpectAdmin);
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+        RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse(
+            "allocated-magistrate");
+        when(roleAssignmentApi.getRoleAssignments(auth, authTokenGenerator.generate(), null, "456")).thenReturn(
+            roleAssignmentServiceResponse);
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
 
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
@@ -479,8 +510,182 @@ public class ManageDocumentsServiceTest {
     }
 
     @Test
-    public void testCopyDocumentIfRestrictedWithCourtAdminRoleOld() {
+    public void testCopyDocumentIfNotRestrictedWithJudgeRole() {
 
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.RESPONDENT)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.No)
+            .isConfidential(YesOrNo.No)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", manageDocuments.getDocument());
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsListInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfQuarantineDocsList",legalProfQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTabInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfUploadDocListDocTab",legalProfUploadDocListDocTabInitial);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRoleExpectAdmin);
+
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+
+        courtStaffUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffUploadDocListDocTab");
+        assertNotNull(courtStaffUploadDocListDocTab);
+        assertEquals(1,courtStaffUploadDocListDocTab.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
+
+    }
+
+    @Test
+    public void testCopyDocumentIfRestrictedWithLaRole() {
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
+            .documentCategories(dynamicList)
+            .isRestricted(YesOrNo.Yes)
+            .isConfidential(YesOrNo.Yes)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> cafcassQuarantineDocsListInitial = new ArrayList<>();
+        cafcassQuarantineDocsListInitial.add(element(QuarantineLegalDoc.builder().build()));
+        caseDataMapInitial.put("cafcassQuarantineDocsList",cafcassQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> cafcassUploadDocListDocTabInitial = new ArrayList<>();
+
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        cafcassUploadDocListDocTabInitial.add(quarantineLegalDocElement);
+        caseDataMapInitial.put("cafcassUploadDocListDocTab",cafcassUploadDocListDocTabInitial);
+
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().cafcassUploadDocListDocTab(cafcassUploadDocListDocTabInitial).build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        UserDetails userDetailsCourtStaffRoleLA = UserDetails.builder()
+            .id("456")
+            .forename("test")
+            .surname("test")
+            .roles(Collections.singletonList(LEGAL_ADVISER_ROLE))
+            .build();
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRoleLA);
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+        RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse(
+            "tribunal-caseworker");
+        when(roleAssignmentApi.getRoleAssignments(auth, authTokenGenerator.generate(), null, "456")).thenReturn(
+            roleAssignmentServiceResponse);
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+
+        courtStaffQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffQuarantineDocsList");
+        assertNotNull(courtStaffQuarantineDocsList);
+        assertEquals(1,courtStaffQuarantineDocsList.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
+
+    }
+
+    @Test
+    public void testCopyDocumentIfNotRestrictedWithLaRole() {
+
+        ManageDocuments manageDocuments = ManageDocuments.builder()
+            .documentParty(DocumentPartyEnum.RESPONDENT)
+            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
+            .isRestricted(YesOrNo.No)
+            .isConfidential(YesOrNo.No)
+            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
+            .build();
+        HashMap hashMap = new HashMap();
+        hashMap.put("testDocument", manageDocuments.getDocument());
+
+        Map<String, Object> caseDataMapInitial = new HashMap<>();
+        caseDataMapInitial.put("manageDocuments",manageDocuments);
+
+        List<Element<QuarantineLegalDoc>> legalProfQuarantineDocsListInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfQuarantineDocsList",legalProfQuarantineDocsListInitial);
+
+        List<Element<QuarantineLegalDoc>> legalProfUploadDocListDocTabInitial = new ArrayList<>();
+        caseDataMapInitial.put("legalProfUploadDocListDocTab",legalProfUploadDocListDocTabInitial);
+
+        manageDocumentsElement = element(manageDocuments);
+
+        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder().build();
+        quarantineLegalDocElement = element(quarantineLegalDoc);
+        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
+
+        CaseData caseData = CaseData.builder()
+            .reviewDocuments(reviewDocuments)
+            .documentManagementDetails(DocumentManagementDetails.builder()
+                                           .manageDocuments(List.of(manageDocumentsElement))
+                                           .build())
+            .build();
+        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
+        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
+
+        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
+        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
+        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
+        UserDetails userDetailsCourtStaffRoleLA = UserDetails.builder()
+            .id("456")
+            .forename("test")
+            .surname("test")
+            .roles(Collections.singletonList(LEGAL_ADVISER_ROLE))
+            .build();
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtStaffRoleLA);
+
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+
+        Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
+
+        courtStaffUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffUploadDocListDocTab");
+        assertNotNull(courtStaffUploadDocListDocTab);
+        assertEquals(1,courtStaffUploadDocListDocTab.size());
+        assertNull(caseDataMapUpdated.get("manageDocuments"));
+
+    }
+
+    @Test
+    public void testCopyDocumentIfRestrictedWithCourtAdminRoleOld() {
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(false);
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
             .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").build()).build())
@@ -584,6 +789,8 @@ public class ManageDocumentsServiceTest {
     @Test
     public void testCopyDocumentIfRestrictedWithCafcassRoleWithNonEmptyCafcassUploadDocListDocTab() {
 
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(false);
+
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.CAFCASS_CYMRU)
             .documentCategories(dynamicList)
@@ -620,7 +827,12 @@ public class ManageDocumentsServiceTest {
 
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsCafcassRole);
-
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+        RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse(
+            "caseworker-privatelaw-externaluser-viewonly");
+        when(roleAssignmentApi.getRoleAssignments(auth, authTokenGenerator.generate(), null, "234")).thenReturn(
+            roleAssignmentServiceResponse);
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
         cafcassQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("cafcassQuarantineDocsList");
@@ -864,6 +1076,9 @@ public class ManageDocumentsServiceTest {
         when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
 
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
+
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
         legalProfQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("legalProfQuarantineDocsList");
@@ -878,8 +1093,37 @@ public class ManageDocumentsServiceTest {
     }
 
     @Test
-    public void testCopyDocumentIfNotRestrictedAndUploadedOnBehalfOfCourt() {
+    public void testGetLoggedInUserTypeForCitizen() {
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsCitizenRole);
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
+        List<String>  loggedInUserTypeList = manageDocumentsService.getLoggedInUserType(auth);
+        assertNotNull(loggedInUserTypeList);
+        assertEquals(UserRoles.CITIZEN.name(), loggedInUserTypeList.get(0));
+    }
 
+    @Test
+    public void testGetLoggedInUserTypeForBulkScan() {
+        when(userService.getUserDetails(auth)).thenReturn(userDetailsBulScanRole);
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
+        List<String>  loggedInUserTypeList = manageDocumentsService.getLoggedInUserType(auth);
+        assertNotNull(loggedInUserTypeList);
+        assertEquals(BULK_SCAN, loggedInUserTypeList.get(0));
+    }
+
+    private RoleAssignmentServiceResponse setAndGetRoleAssignmentServiceResponse(String roleName) {
+        List<RoleAssignmentResponse> listOfRoleAssignmentResponses = new ArrayList<>();
+        RoleAssignmentResponse roleAssignmentResponse = new RoleAssignmentResponse();
+        roleAssignmentResponse.setRoleName(roleName);
+        listOfRoleAssignmentResponses.add(roleAssignmentResponse);
+        RoleAssignmentServiceResponse roleAssignmentServiceResponse = new RoleAssignmentServiceResponse();
+        roleAssignmentServiceResponse.setRoleAssignmentResponse(listOfRoleAssignmentResponses);
+        return roleAssignmentServiceResponse;
+    }
+
+    @Test
+    public void testCopyDocumentIfNotRestrictedAndUploadedOnBehalfOfCourt() {
         ManageDocuments manageDocuments = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.COURT)
             .documentCategories(dynamicList)
@@ -917,7 +1161,12 @@ public class ManageDocumentsServiceTest {
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
         when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtAdminRole);
-
+        when(authTokenGenerator.generate()).thenReturn("serviceAuthToken");
+        RoleAssignmentServiceResponse roleAssignmentServiceResponse = setAndGetRoleAssignmentServiceResponse(
+            "hearing-centre-admin");
+        when(roleAssignmentApi.getRoleAssignments(auth, authTokenGenerator.generate(), null, "345")).thenReturn(
+            roleAssignmentServiceResponse);
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(true);
         Map<String, Object>  caseDataMapUpdated = manageDocumentsService.copyDocument(callbackRequest, auth);
 
         courtStaffUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapUpdated.get("courtStaffUploadDocListDocTab");
@@ -929,7 +1178,7 @@ public class ManageDocumentsServiceTest {
     @Test
     public void returnTrueIfUserIsCourtStaff() {
         when(userService.getUserDetails(auth)).thenReturn(userDetailsCourtAdminRole);
-
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(false);
         Assert.assertTrue(manageDocumentsService.checkIfUserIsCourtStaff(userDetailsCourtAdminRole));
     }
 
@@ -1134,6 +1383,7 @@ public class ManageDocumentsServiceTest {
 
     @Test
     public void validateCourtUser() {
+        when(launchDarklyClient.isFeatureEnabled("role-assignment-api-in-orders-journey")).thenReturn(false);
         ManageDocuments manageDocument = ManageDocuments.builder()
             .documentParty(DocumentPartyEnum.COURT)
             .documentCategories(dynamicList)
@@ -1153,7 +1403,7 @@ public class ManageDocumentsServiceTest {
 
         when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
         when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
-        UserDetails userDetails = UserDetails.builder().roles(List.of(COURT_ADMIN_ROLE)).build();
+        UserDetails userDetails = UserDetails.builder().roles(List.of(COURT_STAFF)).build();
         when(objectMapper.convertValue(callbackRequest.getCaseDetails(), CaseData.class)).thenReturn(caseData);
         List<String> list = manageDocumentsService.validateCourtUser(callbackRequest, userDetails);
         Assert.assertTrue(list.isEmpty());
@@ -1346,7 +1596,6 @@ public class ManageDocumentsServiceTest {
         assertEquals(YesOrNo.Yes,restrictedDocuments.get(0).getValue().getHasTheConfidentialDocumentBeenRenamed());
     }
 
-
     @Test
     public void testGetQuarantineDocumentForUploaderCafcass() {
         QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
@@ -1359,20 +1608,6 @@ public class ManageDocumentsServiceTest {
         assertNotNull(document1);
         assertEquals(quarantineLegalDoc.getCafcassQuarantineDocument().getDocumentUrl(),document1.getDocumentUrl());
     }
-
-    @Test
-    public void testGetQuarantineDocumentForUploaderCitizen() {
-        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
-            .citizenQuarantineDocument(uk.gov.hmcts.reform.prl.models.documents.Document
-                                           .builder().documentUrl("http://test.com/documents/d848addb-c53f-4ac0-a8ce-0a9e7f4d17ba").build()).build();
-        uk.gov.hmcts.reform.prl.models.documents.Document document1 = manageDocumentsService
-            .getQuarantineDocumentForUploader("Citizen", quarantineLegalDoc
-            );
-
-        assertNotNull(document1);
-        assertEquals(quarantineLegalDoc.getCitizenQuarantineDocument().getDocumentUrl(),document1.getDocumentUrl());
-    }
-
 
     @Test
     public void testGetQuarantineDocumentForUploaderBulkScan() {
@@ -1396,169 +1631,6 @@ public class ManageDocumentsServiceTest {
                                               QuarantineLegalDoc.builder().build());
 
         assertNull(document1);
-    }
-
-    @Test
-    public void testUpdateQuarantineDocsCitizenDocumentsTabFalse() {
-
-        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
-            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
-            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
-                          .documentUrl("00000000-0000-0000-0000-000000000000")
-                          .documentFileName("test").build())
-            .uploaderRole("Citizen").build();
-
-        List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab = new ArrayList<>();
-        citizenUploadedDocListDocTab.add(element(quarantineLegalDoc));
-        ReviewDocuments reviewDocuments = ReviewDocuments.builder()
-            .citizenUploadedDocListDocTab(citizenUploadedDocListDocTab)
-            .build();
-
-        List<Element<QuarantineLegalDoc>> citizenQuarantineDocumentList = new ArrayList<>();
-        citizenQuarantineDocumentList.add(element(quarantineLegalDoc));
-
-        CaseData caseData = CaseData.builder()
-            .reviewDocuments(reviewDocuments)
-            .documentManagementDetails(DocumentManagementDetails.builder()
-                                           .citizenQuarantineDocsList(citizenQuarantineDocumentList)
-                                           .build()).build();
-
-        Map<String, Object> caseDataMapInitial = new HashMap<>();
-
-        manageDocumentsService.moveDocumentsToQuarantineTab(quarantineLegalDoc,caseData,caseDataMapInitial,"Citizen");
-
-        citizenQuarantineDocsList = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("citizenQuarantineDocsList");
-
-        assertNotNull(citizenQuarantineDocsList);
-        assertEquals(2,citizenQuarantineDocsList.size());
-
-    }
-
-
-    @Test
-    public void testUpdateQuarantineDocsCitizenDocumentsTabTrue() {
-
-        ManageDocuments manageDocuments = ManageDocuments.builder()
-            .documentParty(DocumentPartyEnum.APPLICANT)
-            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
-            .isRestricted(YesOrNo.No)
-            .isConfidential(YesOrNo.No)
-            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
-            .build();
-
-        Map<String, Object> caseDataMapInitial = new HashMap<>();
-        caseDataMapInitial.put("manageDocuments",manageDocuments);
-
-        manageDocumentsElement = element(manageDocuments);
-
-        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
-            .hasTheConfidentialDocumentBeenRenamed(YesOrNo.No)
-            .isConfidential(null)
-            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
-                          .documentUrl("00000000-0000-0000-0000-000000000000")
-                          .documentFileName("test").build())
-            .isRestricted(null)
-            .restrictedDetails(null)
-            .categoryId("test")
-            .uploaderRole("Citizen").build();
-
-        List<Element<QuarantineLegalDoc>> citizenUploadedDocListDocTab = new ArrayList<>();
-        citizenUploadedDocListDocTab.add(element(quarantineLegalDoc));
-        ReviewDocuments reviewDocuments = ReviewDocuments.builder()
-            .citizenUploadedDocListDocTab(citizenUploadedDocListDocTab)
-            .build();
-
-        CaseData caseData = CaseData.builder()
-            .reviewDocuments(reviewDocuments)
-            .documentManagementDetails(DocumentManagementDetails.builder()
-                                           .manageDocuments(List.of(manageDocumentsElement))
-                                           .build())
-            .build();
-        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
-        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
-
-
-        when(objectMapper.convertValue(Mockito.any(), Mockito.eq(QuarantineLegalDoc.class))).thenReturn(quarantineLegalDoc);
-        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
-        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsSolicitorRole);
-
-        manageDocumentsService
-            .moveDocumentsToRespectiveCategoriesNew(quarantineLegalDoc, userDetailsSolicitorRole, caseData, caseDataMapInitial, "Citizen");
-
-        citizenUploadDocListDocTab = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("citizenUploadedDocListDocTab");
-
-        assertNotNull(citizenUploadDocListDocTab);
-        assertEquals(2,citizenUploadDocListDocTab.size());
-
-    }
-
-
-    @Test
-    public void testMoveCitizenDocumentsToRespectiveCategoriesNew() {
-
-        ManageDocuments manageDocuments = ManageDocuments.builder()
-            .documentParty(DocumentPartyEnum.APPLICANT)
-            .documentCategories(DynamicList.builder().value(DynamicListElement.builder().code("test").label("test").build()).build())
-            .isRestricted(YesOrNo.Yes)
-            .isConfidential(YesOrNo.Yes)
-            .document(uk.gov.hmcts.reform.prl.models.documents.Document.builder().build())
-            .build();
-
-        Map<String, Object> caseDataMapInitial = new HashMap<>();
-        caseDataMapInitial.put("manageDocuments",manageDocuments);
-
-        manageDocumentsElement = element(manageDocuments);
-
-        uk.gov.hmcts.reform.prl.models.documents.Document doc = uk.gov.hmcts.reform.prl.models.documents.Document.builder()
-            .documentFileName("Confidential_test.pdf")
-            .documentBinaryUrl("http://test.link")
-            .documentUrl("http://test.link").build();
-
-        HashMap hashMap = new HashMap();
-        hashMap.put("testDocument", doc);
-
-        quarantineLegalDocElement = element(quarantineConfidentialDoc);
-        ReviewDocuments reviewDocuments = ReviewDocuments.builder().build();
-        CaseData caseData = CaseData.builder()
-            .reviewDocuments(reviewDocuments)
-            .documentManagementDetails(DocumentManagementDetails.builder()
-                                           .manageDocuments(List.of(manageDocumentsElement))
-                                           .build())
-            .build();
-        CaseDetails caseDetails = CaseDetails.builder().id(12345L).data(caseDataMapInitial).build();
-        CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(caseDetails).build();
-
-        when(systemUserService.getSysUserToken()).thenReturn("test");
-        when(authTokenGenerator.generate()).thenReturn("test");
-        Resource expectedResource = new ClassPathResource("task-list-markdown.md");
-        HttpHeaders headers = new HttpHeaders();
-        ResponseEntity<Resource> expectedResponse = new ResponseEntity<>(expectedResource, headers, HttpStatus.OK);
-        when(caseDocumentClient
-                 .getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.anyString()))
-            .thenReturn(expectedResponse);
-        when(caseDocumentClientApi.getDocumentBinary(Mockito.anyString(), Mockito.anyString(), Mockito.any()))
-            .thenReturn(expectedResponse);
-        QuarantineLegalDoc quarantineLegalDoc = QuarantineLegalDoc.builder()
-            .isConfidential(YesOrNo.Yes)
-            .citizenQuarantineDocument(uk.gov.hmcts.reform.prl.models.documents.Document.builder()
-                          .documentFileName("testFileName")
-                          .documentUrl("1accfb1e-2574-4084-b97e-1cd53fd14815").build())
-            .isRestricted(YesOrNo.No).categoryId("test").build();
-        when(objectMapper.convertValue(hashMap, QuarantineLegalDoc.class)).thenReturn(quarantineLegalDoc);
-        when(objectMapper.convertValue(caseDetails.getData(), CaseData.class)).thenReturn(caseData);
-        when(caseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper)).thenReturn(caseData);
-        when(userService.getUserDetails(auth)).thenReturn(userDetailsCitizenRole);
-
-        manageDocumentsService
-            .moveDocumentsToRespectiveCategoriesNew(quarantineLegalDoc, userDetailsCitizenRole, caseData, caseDataMapInitial, "Citizen");
-        List<Element<QuarantineLegalDoc>> confidentialDocuments = (List<Element<QuarantineLegalDoc>>) caseDataMapInitial.get("confidentialDocuments");
-
-        assertNotNull(confidentialDocuments);
-        assertEquals(1,confidentialDocuments.size());
-        assertEquals("testFileName",confidentialDocuments.get(0).getValue().getCitizenQuarantineDocument().getDocumentFileName());
-
-        assertNotNull(quarantineLegalDoc);
     }
 
 
